# decorous-reborn

./: Cargo.toml  README.md
crates/bevy_editor_pls/: Cargo.toml
crates/bevy_editor_pls_core/: Cargo.toml
crates/bevy_editor_pls_core/src/: editor.rs  editor_window.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
crates/decorous/: Cargo.toml
crates/decorous/src/: main.rs
crates/decorous/src/custom_meshes/: drill_holes_mesh.rs  mod.rs  topography_mesh.rs
crates/decorous/src/files_manager/: csv_parser.rs  files_porperties.rs
crates/decorous/src/math/: analytic_geometry.rs
crates/ui_setup/: Cargo.toml
crates/ui_setup/src/: controls.rs  lib.rs
crates/ui_windows/: Cargo.toml
crates/ui_windows/src/: gizmos.rs
src/: main.rs
src/custom_meshes/: drill_holes_mesh.rs  mesh_handlers.rs
src/files_manager/: dxf_parser.rs  mod.rs
src/math/: mod.rs
src/ui_setup/: controls.rs  mod.rs
src/ui_windows/: add.rs  assets.rs  gizmos.rs  inspector.rs  load_drills.rs  mod.rs  nodes_creator.rs  resources.rs
src/ui_windows/cameras/: mod.rs
src/ui_windows/hierarchy/: mod.rs
