[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "decorous-reborn"
version = "0.5.0"
license = "AGPL-3.0 license"
description = "Decorouuuusss uwu"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bevy_editor_pls_core = { version = "0.5.0", path = "crates/bevy_editor_pls_core" }
ui_windows = { version = "0.5.0", path="crates/ui_windows"}
ui_setup = { version = "0.5.0", path="crates/ui_setup"}
decorous = {version = "0.5.0", path="crates/decorous"}

egui = "0.23.0"
bevy-inspector-egui = "0.20"
egui-gizmo = "0.12"

[profile.dev.package."*"]
opt-level = 2