[package]
name = "bevy_editor_pls"
version.workspace = true
edition.workspace = true
license.workspace = true
#repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy_editor_pls_core.workspace = true
bevy_editor_pls_default_windows = { workspace = true, optional = true }
bevy = { version = "0.11", default-features = false, features = ["x11"] }
egui.workspace = true
egui-gizmo.workspace = true
