[package]
name = "decorous"
version.workspace = true
edition.workspace = true
license.workspace = true
#repository.workspace = true
description.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" }
bevy-inspector-egui.workspace = true
ui_setup.workspace = true
ui_windows.workspace = true