[package]
name = "decorous"
version.workspace = true
edition.workspace = true
license.workspace = true
#repository.workspace = true
description.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy-inspector-egui.workspace = true
ui_setup.workspace = true
polars = { version="0.33.2", features=["lazy", "strings"] }
csv = "1.3.0"
delaunator = "1.0.2"
rfd = "0.12.1"
dxf = { git = "https://github.com/Yairama/dxf-rs", branch = "main" }