[package]
name = "ui_setup"
version.workspace = true
edition.workspace = true
license.workspace = true
#repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy_editor_pls_core.workspace = true
ui_windows.workspace = true
bevy.workspace = true
egui.workspace = true
egui-gizmo.workspace = true