[package]
name = "ui_windows"
version.workspace = true
edition.workspace = true
license.workspace = true
#repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy.workspace = true
bevy_editor_pls_core.workspace = true
bevy-inspector-egui.workspace = true
indexmap = "2"
pretty-type-name = "1.0"
bevy_mod_debugdump = "0.8"
opener = "0.6.0"
egui-gizmo.workspace = true
